tests/haste_package_vs_module_incremental/test.js
// @flow

import pkg from 'package';
(pkg: string); // error
